--- a/resources/assets/backend/sass/backend.scss
+++ b/resources/assets/backend/sass/backend.scss
@@ -71,3 +71,9 @@ body,
     line-height: 30px;
     font-size: 12px;
 }
+.aside-menu a{
+    color: rgb(45, 47, 51);
+    text-decoration: none;
+    display: inline-block;
+    width: 100%;
+}
