--- a/resources/assets/backend/sass/backend.scss
+++ b/resources/assets/backend/sass/backend.scss
@@ -60,6 +60,10 @@ body,
     line-height: $header-height;
     cursor: pointer;
 }
+.header-operations a {
+    color: #ffffff;
+    text-decoration: none
+}
 .aside-menu {
     border-right: 1px solid #e6e6e6;
     list-style: none;
@@ -103,4 +107,13 @@ body,
 }
 .data-table {
     margin-top: 30px;
+}
+
+// login
+.login-form {
+    border: 1px solid #efefef;
+    margin-top: 30px;
+    padding: 30px 40px;
+    background: #efefef;
+    border-radius: 10px;
 }
