增加修改密码表单

--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -482,7 +482,7 @@
 
 @font-face {
   font-family: 'element-icons';
-  src: url(/fonts/vendor/element-ui/lib/theme-chalk/element-icons.woff?2fad952a20fbbcfd1bf2ebb210dccf7a) format("woff"), url(/fonts/vendor/element-ui/lib/theme-chalk/element-icons.ttf?6f0a76321d30f3c8120915e57f7bd77e) format("truetype");
+  src: url(/fonts/vendor/_element-ui@2.0.4@element-ui/lib/theme-chalk/element-icons.woff?9b70ee41d12a1cf127400d23534f7efc) format("woff"), url(/fonts/vendor/_element-ui@2.0.4@element-ui/lib/theme-chalk/element-icons.ttf?27c72091ab590fb5d1c3ef90f988ddce) format("truetype");
   /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
   font-weight: normal;
   font-style: normal;
@@ -2797,19 +2797,6 @@
   width: 6px;
 }
 
-.el-input .el-input__clear {
-  color: #b4bccc;
-  font-size: 14px;
-  line-height: 16px;
-  cursor: pointer;
-  -webkit-transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
-.el-input .el-input__clear:hover {
-  color: #878d99;
-}
-
 .el-input__inner {
   -webkit-appearance: none;
   background-color: #fff;
@@ -3508,9 +3495,9 @@
   position: relative;
   cursor: pointer;
   font-size: 12px;
-  height: 16px;
-  width: 16px;
-  line-height: 16px;
+  height: 18px;
+  width: 18px;
+  line-height: 18px;
   vertical-align: middle;
   top: -1px;
   right: -5px;
@@ -4930,16 +4917,6 @@
   height: 14px;
 }
 
-.el-select__multiple-text {
-  margin-left: 15px;
-  color: #5a5e66;
-  font-size: 14px;
-  display: inline;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .el-select__close {
   cursor: pointer;
   position: absolute;
@@ -5079,7 +5056,6 @@
 .el-pagination .btn-next .el-icon {
   display: block;
   font-size: 12px;
-  font-weight: bold;
 }
 
 .el-pagination .btn-prev {
@@ -5165,42 +5141,6 @@
   margin: 0;
 }
 
-.el-pagination.is-background .btn-prev,
-.el-pagination.is-background .btn-next,
-.el-pagination.is-background .el-pager li {
-  margin: 0 5px;
-  background-color: #f3f4f5;
-  color: #5a5e66;
-  min-width: 30px;
-  border-radius: 2px;
-}
-
-.el-pagination.is-background .btn-prev,
-.el-pagination.is-background .btn-next {
-  padding: 0;
-}
-
-.el-pagination.is-background .btn-prev.disabled,
-.el-pagination.is-background .btn-next.disabled {
-  color: #b4bccc;
-}
-
-.el-pagination.is-background .el-pager li:hover {
-  color: #409EFF;
-}
-
-.el-pagination.is-background .el-pager li.active {
-  background-color: #409EFF;
-  color: #fff;
-}
-
-.el-pagination.is-background.el-pagination--small .btn-prev,
-.el-pagination.is-background.el-pagination--small .btn-next,
-.el-pagination.is-background.el-pagination--small .el-pager li {
-  margin: 0 3px;
-  min-width: 22px;
-}
-
 .el-pager {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -5214,8 +5154,8 @@
   margin: 0;
 }
 
-.el-pager .more::before {
-  line-height: 30px;
+.el-pager .el-icon-more::before {
+  vertical-align: -4px;
 }
 
 .el-pager li {
@@ -6580,19 +6520,6 @@
 .el-input::-webkit-scrollbar-track-piece {
   background: #fff;
   width: 6px;
-}
-
-.el-input .el-input__clear {
-  color: #b4bccc;
-  font-size: 14px;
-  line-height: 16px;
-  cursor: pointer;
-  -webkit-transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
-.el-input .el-input__clear:hover {
-  color: #878d99;
 }
 
 .el-input__inner {
@@ -9227,7 +9154,7 @@
 }
 
 .el-button--text {
-  border-color: transparent;
+  border: none;
   color: #409EFF;
   background: transparent;
   padding-left: 0;
@@ -9245,12 +9172,6 @@
   color: #3a8ee6;
   border-color: transparent;
   background-color: transparent;
-}
-
-.el-button--text.is-disabled,
-.el-button--text.is-disabled:hover,
-.el-button--text.is-disabled:focus {
-  border-color: transparent;
 }
 
 .el-button-group {
@@ -11037,19 +10958,6 @@
   width: 6px;
 }
 
-.el-input .el-input__clear {
-  color: #b4bccc;
-  font-size: 14px;
-  line-height: 16px;
-  cursor: pointer;
-  -webkit-transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
-.el-input .el-input__clear:hover {
-  color: #878d99;
-}
-
 .el-input__inner {
   -webkit-appearance: none;
   background-color: #fff;
@@ -12115,19 +12023,6 @@
 .el-input::-webkit-scrollbar-track-piece {
   background: #fff;
   width: 6px;
-}
-
-.el-input .el-input__clear {
-  color: #b4bccc;
-  font-size: 14px;
-  line-height: 16px;
-  cursor: pointer;
-  -webkit-transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
-.el-input .el-input__clear:hover {
-  color: #878d99;
 }
 
 .el-input__inner {
@@ -17363,19 +17258,6 @@
   width: 6px;
 }
 
-.el-input .el-input__clear {
-  color: #b4bccc;
-  font-size: 14px;
-  line-height: 16px;
-  cursor: pointer;
-  -webkit-transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
-.el-input .el-input__clear:hover {
-  color: #878d99;
-}
-
 .el-input__inner {
   -webkit-appearance: none;
   background-color: #fff;
@@ -18074,9 +17956,9 @@
   position: relative;
   cursor: pointer;
   font-size: 12px;
-  height: 16px;
-  width: 16px;
-  line-height: 16px;
+  height: 18px;
+  width: 18px;
+  line-height: 18px;
   vertical-align: middle;
   top: -1px;
   right: -5px;
@@ -19496,16 +19378,6 @@
   height: 14px;
 }
 
-.el-select__multiple-text {
-  margin-left: 15px;
-  color: #5a5e66;
-  font-size: 14px;
-  display: inline;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .el-select__close {
   cursor: pointer;
   position: absolute;
@@ -20554,7 +20426,7 @@
 }
 
 .el-button--text {
-  border-color: transparent;
+  border: none;
   color: #409EFF;
   background: transparent;
   padding-left: 0;
@@ -20572,12 +20444,6 @@
   color: #3a8ee6;
   border-color: transparent;
   background-color: transparent;
-}
-
-.el-button--text.is-disabled,
-.el-button--text.is-disabled:hover,
-.el-button--text.is-disabled:focus {
-  border-color: transparent;
 }
 
 .el-button-group {
@@ -22157,9 +22023,9 @@
   position: relative;
   cursor: pointer;
   font-size: 12px;
-  height: 16px;
-  width: 16px;
-  line-height: 16px;
+  height: 18px;
+  width: 18px;
+  line-height: 18px;
   vertical-align: middle;
   top: -1px;
   right: -5px;
@@ -22894,37 +22760,24 @@
 }
 
 .el-table .caret-wrapper {
+  position: relative;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 34px;
+  height: 13px;
   width: 24px;
-  vertical-align: middle;
   cursor: pointer;
   overflow: initial;
 }
 
 .el-table .sort-caret {
-  color: #b4bccc;
+  color: #878d99;
   width: 14px;
   overflow: hidden;
-  font-size: 15px;
-  position: absolute;
-}
-
-.el-table .sort-caret.ascending {
-  top: 5px;
-}
-
-.el-table .sort-caret.descending {
-  bottom: 7px;
+  font-size: 13px;
 }
 
 .el-table .ascending .sort-caret.ascending {
@@ -24458,9 +24311,9 @@
   position: relative;
   cursor: pointer;
   font-size: 12px;
-  height: 16px;
-  width: 16px;
-  line-height: 16px;
+  height: 18px;
+  width: 18px;
+  line-height: 18px;
   vertical-align: middle;
   top: -1px;
   right: -5px;
@@ -28750,19 +28603,6 @@
 .el-input::-webkit-scrollbar-track-piece {
   background: #fff;
   width: 6px;
-}
-
-.el-input .el-input__clear {
-  color: #b4bccc;
-  font-size: 14px;
-  line-height: 16px;
-  cursor: pointer;
-  -webkit-transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
-.el-input .el-input__clear:hover {
-  color: #878d99;
 }
 
 .el-input__inner {
@@ -34413,19 +34253,6 @@
   width: 6px;
 }
 
-.el-input .el-input__clear {
-  color: #b4bccc;
-  font-size: 14px;
-  line-height: 16px;
-  cursor: pointer;
-  -webkit-transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
-.el-input .el-input__clear:hover {
-  color: #878d99;
-}
-
 .el-input__inner {
   -webkit-appearance: none;
   background-color: #fff;
@@ -36460,11 +36287,6 @@
   margin-bottom: 12px;
 }
 
-.el-popover__reference:focus:not(.focusing),
-.el-popover__reference:focus:hover {
-  outline-width: 0;
-}
-
 /* BEM support Func
  -------------------------- */
 
@@ -38353,7 +38175,7 @@
 }
 
 .el-button--text {
-  border-color: transparent;
+  border: none;
   color: #409EFF;
   background: transparent;
   padding-left: 0;
@@ -38371,12 +38193,6 @@
   color: #3a8ee6;
   border-color: transparent;
   background-color: transparent;
-}
-
-.el-button--text.is-disabled,
-.el-button--text.is-disabled:hover,
-.el-button--text.is-disabled:focus {
-  border-color: transparent;
 }
 
 .el-button-group {
@@ -38884,19 +38700,6 @@
 .el-input::-webkit-scrollbar-track-piece {
   background: #fff;
   width: 6px;
-}
-
-.el-input .el-input__clear {
-  color: #b4bccc;
-  font-size: 14px;
-  line-height: 16px;
-  cursor: pointer;
-  -webkit-transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
-.el-input .el-input__clear:hover {
-  color: #878d99;
 }
 
 .el-input__inner {
@@ -41866,9 +41669,9 @@
   position: relative;
   cursor: pointer;
   font-size: 12px;
-  height: 16px;
-  width: 16px;
-  line-height: 16px;
+  height: 18px;
+  width: 18px;
+  line-height: 18px;
   vertical-align: middle;
   top: -1px;
   right: -5px;
@@ -44308,19 +44111,6 @@
 .el-input::-webkit-scrollbar-track-piece {
   background: #fff;
   width: 6px;
-}
-
-.el-input .el-input__clear {
-  color: #b4bccc;
-  font-size: 14px;
-  line-height: 16px;
-  cursor: pointer;
-  -webkit-transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
-.el-input .el-input__clear:hover {
-  color: #878d99;
 }
 
 .el-input__inner {
@@ -56894,19 +56684,6 @@
   width: 6px;
 }
 
-.el-input .el-input__clear {
-  color: #b4bccc;
-  font-size: 14px;
-  line-height: 16px;
-  cursor: pointer;
-  -webkit-transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
-.el-input .el-input__clear:hover {
-  color: #878d99;
-}
-
 .el-input__inner {
   -webkit-appearance: none;
   background-color: #fff;
@@ -59319,19 +59096,6 @@
   width: 6px;
 }
 
-.el-input .el-input__clear {
-  color: #b4bccc;
-  font-size: 14px;
-  line-height: 16px;
-  cursor: pointer;
-  -webkit-transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
-.el-input .el-input__clear:hover {
-  color: #878d99;
-}
-
 .el-input__inner {
   -webkit-appearance: none;
   background-color: #fff;
@@ -60648,7 +60412,7 @@
 }
 
 .el-button--text {
-  border-color: transparent;
+  border: none;
   color: #409EFF;
   background: transparent;
   padding-left: 0;
@@ -60666,12 +60430,6 @@
   color: #3a8ee6;
   border-color: transparent;
   background-color: transparent;
-}
-
-.el-button--text.is-disabled,
-.el-button--text.is-disabled:hover,
-.el-button--text.is-disabled:focus {
-  border-color: transparent;
 }
 
 .el-button-group {
@@ -63428,6 +63186,10 @@ body,
   height: 100%;
 }
 
+a {
+  text-decoration: none;
+}
+
 .wrapper {
   height: 100%;
 }
@@ -63533,5 +63295,14 @@ body,
 
 .login-footer {
   text-align: center;
+}
+
+.edit-form {
+  margin-top: 20px;
+  padding-top: 25px;
+}
+
+.edit-form .el-form-item.input {
+  max-width: 400px;
 }
 
