--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -482,7 +482,7 @@
 
 @font-face {
   font-family: 'element-icons';
-  src: url(/fonts/vendor/_element-ui@2.0.5@element-ui/lib/theme-chalk/element-icons.woff?2fad952a20fbbcfd1bf2ebb210dccf7a) format("woff"), url(/fonts/vendor/_element-ui@2.0.5@element-ui/lib/theme-chalk/element-icons.ttf?6f0a76321d30f3c8120915e57f7bd77e) format("truetype");
+  src: url(/fonts/vendor/_element-ui@2.0.4@element-ui/lib/theme-chalk/element-icons.woff?9b70ee41d12a1cf127400d23534f7efc) format("woff"), url(/fonts/vendor/_element-ui@2.0.4@element-ui/lib/theme-chalk/element-icons.ttf?27c72091ab590fb5d1c3ef90f988ddce) format("truetype");
   /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
   font-weight: normal;
   font-style: normal;
@@ -4915,16 +4915,6 @@
 
 .el-select__input.is-mini {
   height: 14px;
-}
-
-.el-select__multiple-text {
-  margin-left: 15px;
-  color: #5a5e66;
-  font-size: 14px;
-  display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .el-select__close {
@@ -19388,16 +19378,6 @@
   height: 14px;
 }
 
-.el-select__multiple-text {
-  margin-left: 15px;
-  color: #5a5e66;
-  font-size: 14px;
-  display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .el-select__close {
   cursor: pointer;
   position: absolute;
@@ -22780,29 +22760,24 @@
 }
 
 .el-table .caret-wrapper {
-  position: absolute;
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle;
+  position: relative;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 13px;
+  width: 24px;
   cursor: pointer;
   overflow: initial;
 }
 
 .el-table .sort-caret {
-  color: #b4bccc;
+  color: #878d99;
   width: 14px;
   overflow: hidden;
-  font-size: 15px;
-  position: absolute;
-  left: 4px;
-}
-
-.el-table .sort-caret.ascending {
-  top: 1px;
-}
-
-.el-table .sort-caret.descending {
-  bottom: 1px;
+  font-size: 13px;
 }
 
 .el-table .ascending .sort-caret.ascending {
@@ -36310,11 +36285,6 @@
   font-size: 16px;
   line-height: 1;
   margin-bottom: 12px;
-}
-
-.el-popover__reference:focus:not(.focusing),
-.el-popover__reference:focus:hover {
-  outline-width: 0;
 }
 
 /* BEM support Func
